--- a/package.json
+++ b/package.json
@@ -9,13 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.10.2",
+    "@types/bcrypt": "^5.0.2",
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
     "next": "14.1.1",
+    "next-auth": "^4.24.6",
+    "prisma": "^5.10.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.51.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
