--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
     "@types/bcrypt": "^5.0.2",
+    "@uploadthing/react": "^6.3.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -26,7 +27,9 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "tailwind-merge": "^2.2.1",
+    "uploadthing": "^6.5.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
