--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@uploadthing/react": "^6.3.2",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
@@ -23,6 +25,7 @@
     "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
