--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.8",
+    "nanoid": "^5.0.6",
     "next": "14.1.1",
     "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
