--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
     "uploadthing": "^6.5.0",
     "zod": "^3.22.4"
