--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "14.2.1",
     "next-auth": "^4.24.6",
     "prisma": "^5.10.2",
+    "puppeteer": "^22.7.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
