--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
+    "@sparticuz/chromium-min": "^123.0.1",
     "@types/bcrypt": "^5.0.2",
     "@uploadthing/react": "^6.3.2",
     "axios": "^1.6.7",
