--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
     "@types/bcrypt": "^5.0.2",
+    "@uploadthing/react": "^6.5.3",
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "chart.js": "^4.4.2",
@@ -34,6 +35,7 @@
     "react-spinners": "^0.13.8",
     "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
+    "uploadthing": "^6.10.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
