--- a/package.json
+++ b/package.json
@@ -9,44 +9,44 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
+    "@hookform/resolvers": "^3.9.0",
+    "@prisma/client": "^5.17.0",
     "@types/bcrypt": "^5.0.2",
-    "@uploadthing/react": "^6.6.0",
-    "axios": "^1.6.7",
+    "@uploadthing/react": "^6.7.2",
+    "axios": "^1.7.3",
     "bcrypt": "^5.1.1",
-    "chart.js": "^4.4.2",
+    "chart.js": "^4.4.3",
     "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "date-fns": "^3.3.1",
-    "framer-motion": "^11.0.8",
+    "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.3.21",
     "html2canvas": "^1.4.1",
-    "nanoid": "^5.0.6",
-    "next": "14.2.1",
-    "next-auth": "^4.24.6",
-    "prisma": "^5.10.2",
-    "react": "^18",
+    "nanoid": "^5.0.7",
+    "next": "14.2.5",
+    "next-auth": "5.0.0-beta.20",
+    "prisma": "^5.17.0",
+    "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.0",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.0.1",
+    "react-icons": "^5.2.1",
     "react-spinners": "^0.13.8",
-    "sharp": "^0.33.2",
-    "tailwind-merge": "^2.2.1",
-    "uploadthing": "^6.12.0",
-    "zod": "^3.22.4"
+    "sharp": "^0.33.4",
+    "tailwind-merge": "^2.4.0",
+    "uploadthing": "^6.13.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "@types/node": "^20.14.14",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "^8.4.40",
+    "tailwindcss": "^3.4.7",
+    "typescript": "^5.5.4"
   }
 }
